--- a/views/syncBeforeList.ejs
+++ b/views/syncBeforeList.ejs
@@ -23,17 +23,30 @@
 </style>
 </head>
 <body>
-<div class="container" style="margin-top: 2%">
+<div class="container-fluid" style="margin-top: 2%">
     <!-- 총계 -->
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="col-md-3 col-sm-3">
-                <p class="text-left"><h4>Date : <%=now%></h4></p>
-            </div>
-            <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" id="totalInfo">
+    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-md-3 col-sm-3">
+                    <p class="text-left"><h4>Date : <%=now%></h4></p>
+                </div>
+                <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" id="totalInfo">
+                </div>
             </div>
         </div>
     </div>
+    <!-- 불가수 -->
+    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-md-3 col-sm-3" id="totalInfo2">
+                </div>
+                <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" >
+                    <p class="text-right"><h4>* 불가 수는 not found에 대한 수입니다.</h4></p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- radio 버튼 -->
     <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
@@ -56,6 +69,15 @@
             <% } %>
                 전체</label>
             </div>
+            <div class="form-group">
+                <label class="radio-inline">
+                    <% if(radioType == "e") { %>
+                    <input type="radio" name="radioType" value="e" checked="checked">
+                    <% } else { %>
+                    <input type="radio" name="radioType" value="e">
+                    <% } %>
+                    불가</label>
+            </div>
         </form>
     </div>
     <!-- list -->
@@ -64,7 +86,8 @@
                 <colgroup>
                     <col width="5%" />
                     <col width="7%" />
-                    <col width="78%" />
+                    <col width="68%" />
+                    <col width="10%" />
                     <col width="10%" />
                 </colgroup>
                 <tr class="info">
@@ -72,6 +95,7 @@
                     <th class="text-center">Date</th>
                     <th>Content Name</th>
                     <th class="text-center">Solbox Status</th>
+                    <th class="text-center">비고</th>
                 </tr>
         </table>
     </div>
@@ -98,10 +122,15 @@
 
                 $("#totalInfo").append(divData);
 
+                var divData2 = "";
+                divData2 = '<p class="text-left"><h4>불가수 : <strong>'+data.exCnt+'</strong></h4></p>';
+
+                $("#totalInfo2").append(divData2);
+
                 var trData = "";
                 var dataLen = data.arrData.length;
                 if(dataLen < 1) {
-                    trData += '<tr><td colspan="4" class="text-center">결과가 없습니다.</td></tr>';
+                    trData += '<tr><td colspan="5" class="text-center">결과가 없습니다.</td></tr>';
                 }
                 for(var i=0 ; i < dataLen ; i++) {
                     var item = data.arrData[i];
@@ -119,6 +148,7 @@
                     trData += item.name;
                     trData += '</h6></td>';
                     trData += '<td class="text-center">'+item.status+'</td>';
+                    trData += '<td class="text-center">'+item.msg+'</td>';
                     trData += '</tr>';
                 }
                 $("#tableList").append(trData);
