--- a/views/syncList.ejs
+++ b/views/syncList.ejs
@@ -23,17 +23,30 @@
 </style>
 </head>
 <body>
-<div class="container" style="margin-top: 2%">
+<div class="container-fluid" style="margin-top: 2%">
     <!-- 총계 -->
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="col-md-3 col-sm-3">
-                <p class="text-left"><h4>Date : <%=now%></h4></p>
-            </div>
-            <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" id="totalInfo">
+    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-md-3 col-sm-3">
+                    <p class="text-left"><h4>Date : <%=now%></h4></p>
+                </div>
+                <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" id="totalInfo">
+                </div>
             </div>
         </div>
     </div>
+    <!-- 불가수 -->
+    <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <div class="col-md-3 col-sm-3" id="totalInfo2">
+                </div>
+                <div class="col-md-6 col-md-offset-1 col-sm-6 col-sm-offset-1" >
+                    <p class="text-right"><h4>* 불가 수는 not found에 대한 수입니다.</h4></p>
+                </div>
+            </div>
+        </div>
     </div>
     <!-- radio 버튼 -->
     <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
@@ -108,6 +121,11 @@
                 divData += '&nbsp;&nbsp;&nbsp;총수 : <strong>'+data.totalCnt+'</strong> (성공률 : <strong>'+data.percent+'<small>%</small></strong>)</h4></p>';
 
                 $("#totalInfo").append(divData);
+
+                var divData2 = "";
+                divData2 = '<p class="text-left"><h4>불가수 : <strong>'+data.exCnt+'</strong></h4></p>';
+
+                $("#totalInfo2").append(divData2);
 
                 var trData = "";
                 var dataLen = data.arrData.length;
